--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,110 @@
+anyio==4.0.0
+appdirs==1.4.4
+attrs==23.1.0
+beautifulsoup4==4.12.2
+boto3==1.28.65
+botocore==1.31.65
+bs4==0.0.1
+certifi==2023.7.22
+cffi==1.16.0
+chardet==3.0.4
+charset-normalizer==3.3.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.1.1
+cycler==0.12.1
+deep-translator==1.11.4
+docutils==0.20.1
+EasyProcess==1.1
+english-words==2.0.1
+entrypoint2==1.1
+filestack-python==3.5.0
+fonttools==4.43.1
+futures==3.0.5
+googletrans==3.0.0
+goslate==1.5.4
+gTTS==2.4.0
+h11==0.14.0
+h2==3.2.0
+hpack==3.0.0
+hstspreload==2023.1.1
+httpcore==0.18.0
+httpx==0.25.0
+hyperframe==5.2.0
+idna==2.10
+importlib-metadata==6.8.0
+jmespath==1.0.1
+joblib==1.3.2
+keyboard==0.13.5
+Kivy-Garden==0.1.5
+kiwisolver==1.4.5
+langdetect==1.0.9
+libretranslatepy==2.1.1
+lxml==4.9.3
+matplotlib==3.8.0
+morse-talk==0.2
+MouseInfo==0.1.3
+mss==9.0.1
+nltk==3.8.1
+numpy==1.26.1
+outcome==1.2.0
+packaging==23.2
+pefile==2023.2.7
+Pillow==10.1.0
+playht==0.0.8
+playsound==1.3.0
+PyAutoGUI==0.9.54
+pycparser==2.21
+pydub==0.25.1
+pyee==8.2.2
+pygame==2.5.2
+PyGetWindow==0.0.9
+Pygments==2.16.1
+pyinstaller==6.1.0
+pyinstaller-hooks-contrib==2023.10
+pyMorseTranslator==1.2.0
+PyMsgBox==1.0.9
+pynput==1.7.6
+pyparsing==3.1.1
+pyperclip==1.8.2
+pypiwin32==223
+pyppeteer==1.0.2
+pyppeteer-stealth==2.7.4
+PyRect==0.2.0
+pyreqs==0.1.1
+pyscreenshot==3.1
+PyScreeze==0.1.29
+PySocks==1.7.1
+python-dateutil==2.8.2
+python-dotenv==1.0.0
 python-telegram-bot==20.3
+pytweening==1.0.7
+pywin32==306
+pywin32-ctypes==0.2.2
+railway==0.0.4
+regex==2023.10.3
+requests==2.31.0
+rfc3986==1.5.0
+s3transfer==0.7.0
+schedule==1.2.1
+scikit-learn==1.3.1
+scipy==1.11.3
+selenium==4.13.0
+sh==2.0.6
+six==1.16.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+sounddevice==0.4.6
+soupsieve==2.5
+textblob==0.17.1
+threadpoolctl==3.2.0
+tqdm==4.66.1
+trafaret==2.0.2
+translate==3.6.1
+trio==0.22.2
+trio-websocket==0.11.1
+urllib3==1.26.17
+websockets==10.4
+wordlist==1.0.1
+wsproto==1.2.0
+zipp==3.17.0
